Objects and fixed Depth Reconstruction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 2.8.11)
 project (LinearAlgebra)
 
-add_executable (sim main.cpp game.cpp camera.cpp utilities/matrix.cpp utilities/transform.cpp utilities/vector.cpp ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/src/gl3w.c)
+add_executable (sim main.cpp game.cpp camera.cpp object.cpp utilities/matrix.cpp utilities/transform.cpp utilities/vector.cpp ${CMAKE_CURRENT_SOURCE_DIR}/dependencies/src/gl3w.c)
 
 find_package(PkgConfig REQUIRED)
 pkg_search_module(GLFW REQUIRED glfw3)
